5.1.1~beta6 (2015-05-09)
DEL: removed old v2 API

5.1.1~beta5 (2015-05-04)
UPD: improved logging (debug only)

5.1.1~beta4 (2015-05-02)
ADD: show deprecation warning of old plugin calls starting with Isengard
ADD: EndPoint: 'plugin://plugin.video.youtube/search/?q=[URL_ENC_TEXT]'
UPD: Improved error handling

5.1.1~beta3 (2015-05-01)
FIX: refresh after rating a video (own playlist only)

5.1.1~beta2 (2015-05-01)
ADD: 'More...' in context menu to provide more items
UPD: reorganized context menu

5.1.1~beta (2015-04-30)
UPD: Ukrainian (thx 2 Dukobpa3)
UPD: Russian (thx 2 BytEvil)
UPD: new second fanart
FIX: add 'refresh' again for 'My subscriptions'

5.1.0 (2015-04-22)
ADD: Double login to support 'My subscriptions' via YouTube TV API
ADD: 'More Links from the description' - extracts further links from the description
ADD: Korean (thx 2 piodio)
UPD: removed old implementation of 'My Subscriptions'
UPD: new fanart and icon
UPD: changed credentials
UPD: minimal quota-optimization
UPD: French (thx 2 eauland)
UPD: YouTube relevant description links - improved extraction and resolving of video/playlist urls
UPD: YouTube relevant description links - improved extraction and resolving of user/channel urls
UPD: YouTube relevant description links - improved performance resolving urls with caching
UPD: regex optimizations for season and expisode extraction
FIX: support fanart of channel in new implementation of 'My Subscriptions'
FIX: YouTube relevant description links - script error while some server return garbage for a location
FIX: script error while resolving url fails
FIX: script error while adding video to a playlist
FIX: show seconds (runtime) in Gotham

5.0.9 (2015-03-14)
ADD: 'duration' optimized for KODI 15.X (Isengard)
ADD: EndPoint for listing the videos of a playlist: "plugin://plugin.video.youtube/playlist/<PLAYLIST_ID>/"
UPD: optimized client-/server transfer (use gzip)

5.0.8 (2015-03-05)
UPD: Polish (thx 2 Etharr)
UPD: Russian (thx 2 BytEvil)